rubocop/examples/good/style_MethodName.rb
# Use snake_case for symbols, methods and variables.

# good
:some_symbol

def some_method
  ...
end
